tf-aws-digitalocean-cloudflare/modules/aws_vpc/02_securityGroups.tf
resource "aws_security_group" "primary" {
  name			= "primary_sg"
  description	= "Primary Security Group"
  vpc_id		= aws_vpc.main.id

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "tcp"
    self      = true
  }
  
  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "tcp"
    cidr_blocks = [var.vpc_master_cidr]
  }

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = [var.home_ipaddr]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = [var.home_ipaddr]
  }


  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
